--- a/fibonacci.ipynb
+++ b/fibonacci.ipynb
@@ -31,13 +31,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "fFX88m8hWJIy",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a5fc33fb-8125-4d7d-ee07-d7248244e355"
+        "outputId": "20f58f36-6e7a-4ada-a849-051b034e8029"
       },
       "outputs": [
         {
@@ -47,8 +47,14 @@
             "Digite um numero para calcular o seu 'fib', e então compararmos o seu tempo de execução \n",
             " em recursão VS programação dinamica \n",
             " \n",
-            ">>> 50\n",
+            ">>> 10\n",
             "\n",
+            "\n",
+            "o fib de  10  É igual a:  55 \n",
+            "\n",
+            "Utiliando rescursão foi gasto um tempo de:  0.00005578994750976562 \n",
+            "\n",
+            "Utiliando a programação dinamica foi gasto um tempo de:  0.00000858306884765625 \n",
             "\n"
           ]
         }
